objects/ASI_CRM_Pros_Volume_Potential__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Criteria_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria Threshold</label>
        <referenceTo>ASI_CRM_Criteria_Threshold__c</referenceTo>
        <relationshipLabel>Pros Volume Potentials</relationshipLabel>
        <relationshipName>ASI_PROS_Pros_Volume_Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Pros_Segmentation__c</fullName>
        <label>Pros Segmentation</label>
        <referenceTo>ASI_CRM_Pros_Segmentation__c</referenceTo>
        <relationshipLabel>Pros Volume Potentials</relationshipLabel>
        <relationshipName>ASI_PROS_Pros_Volume_Potentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Statement__c</fullName>
        <formula>ASI_CRM_SG_Criteria_Threshold__r.ASI_CRM_SG_Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Pros Volume Potential</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Pros_Segmentation__c</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <columns>ASI_CRM_SG_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VP-{00000}</displayFormat>
        <label>Pros Volume Potential No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pros Volume Potentials</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Pros_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM MY Pros Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_ProsVolumePotential</fullName>
        <active>true</active>
        <label>ASI CRM SG ProsVolumePotential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Pros_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM TH Pros Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Pros_Volume_Potential</fullName>
        <active>true</active>
        <label>ASI CRM TW Pros Volume Potential</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>